# rqr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/instructions/: Base.instructions.md  Project.instructions.md
.github/workflows/: rust.yml
benches/: decode_benchmark.rs  encode_benchmark.rs
doc/: Architecture.md  build_sizes.csv
examples/: demo.sh  lib_usage.rs
script/: before_commit.sh  init.sh  precheck.sh  record_build_size.sh  update_version.sh
src/: lib.rs  main.rs
src/commands/: decode.rs  encode.rs  mod.rs
src/qr/: decoder.rs  encoder.rs  mod.rs  output.rs
src/utils/: error.rs  mod.rs
tests/: integration_test.rs  property_test.rs
tests/common/: mod.rs
wix/: main.wxs
