[package]
name = "rqr"
version = "0.1.0"
edition = "2024"
authors = ["Student Wei <studentweis@gmail.com>"]
description = "A fast and simple CLI tool for encoding and decoding QR codes."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/StudentWeis/rqr"
repository = "https://github.com/StudentWeis/rqr"
keywords = ["qr", "qrcode", "cli", "encoder", "decoder"]
categories = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "rqr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
qrcode = "0.14"
image = "0.25.8"
rqrr = "0.10.0"
thiserror = "2"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }

[profile.dist]
inherits = "release"
lto = "thin"
