[package]
name = "rqr"
version = "0.1.0"
edition = "2024"
authors = ["Student Wei <studentweis@gmail.com>"]
description = "A fast and simple CLI tool for encoding and decoding QR codes."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/StudentWeis/rqr"
repository = "https://github.com/StudentWeis/rqr"
keywords = ["qr", "qrcode", "cli", "encoder", "decoder"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
qrcode = "0.14"
image = "0.25.10"
rqrr = "0.10.1"
thiserror = "2"
hex = "0.4"
reqwest = { version = "0.13.2", features = ["blocking"] }

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2.0"
predicates = "3.1"

[profile.dist]
inherits = "release"
lto = "thin"
